CAMEL-14640: Upgrade guava